--- a/review.css
+++ b/review.css
@@ -1,9 +1,29 @@
-body {
+:root {
+  /* fonts */
+  --white-text: #d7ebfd;
+  --black-text: #001d37;
+
+  /* backgrounds */
+  --dark-background: #001d37;
+  --light-background: #f0f0f0;
+  --light-background-darkened: #f0f0f0ef;
+
+  /* outline */
+  --dark-outline: #001d37;
+}
+
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
+
+body,
+html {
   font-family: 'Source Code Pro', sans-serif;
 }
 
-h1 {
-  font-size: 100px;
+h1 {font-size: 100px;
   font-weight: bold;
 }
 
@@ -14,24 +34,54 @@ p {
 .container {
   display: flex;
   justify-content: center;
-  width: 100%;
 }
 
 .hero-section {
   display: flex;
+  background-color: var(--dark-background);
+  color: var(--white-text);
+  padding-top: 8.688rem;
+  padding-left: 11.75rem;
 }
 
 .hero-section .left {
-  background-color: rgb(106, 176, 111);
   width: 50%;
+}
+
+.hero-section .left p {
+  width: 50%;
+  padding-top: 2.313rem;
 }
 
 .hero-section .right {
-  background-color: rgb(208, 193, 193);
   width: 50%;
 }
 
-.hero-section button {
+.hero-section a {
   border-radius: 30px;
-  padding: 10px 25px;
+  padding: 5px 10px;
+  font-weight: bold;
+  text-decoration: none;
+  color: var(--dark-background);
+}
+
+.hero-section .btn-container {
+  padding-top: 2.437rem;
+}
+
+.hero-section .btn-primary {
+  background-color: var(--light-background);
+  border: 2px solid var(--dark-outline);
+}
+
+.hero-section .btn-primary:hover {
+  background-color: var(--light-background-darkened);
+}
+
+.hero-section .btn-outline {
+  color: var(--light-background);
+}
+
+.hero-section .btn-outline:hover {
+  box-shadow: inset 0 0 0 2px var(--light-background);
 }
