--- a/review.css
+++ b/review.css
@@ -120,9 +120,9 @@
 }
 
 .btn {
-  padding: 14px 40px !important;
-  font-weight: 600;
-  border-radius: 71px;
+  padding: var(--spacing-12px) var(--spacing-32px) !important;
+  font-weight: var(--fw-600--semi-bold);
+  border-radius: var(--spacing-64px);
 }
 
 /* ------------------------ */
@@ -140,12 +140,12 @@ body {
   font-family: 'Source Code Pro', sans-serif;
 }
 h1 {
-  font-size: 100px;
-  font-weight: bold;
+  font-size: var(--fs-98);
+  font-weight: var(--fw-700--bold);
 }
 
 p {
-  font-size: 20px;
+  font-size: var(--fs-20);
 }
 
 /* ------------------------ */
@@ -164,7 +164,7 @@ p {
 }
 
 .hero-section .left p {
-  padding-top: 2.313rem;
+  padding-top: var(--spacing-32px);
   width: 67%;
 }
 
@@ -173,16 +173,16 @@ p {
 }
 
 .hero-section a {
-  padding: 5px 10px;
-  font-weight: bold;
+  padding: var(--spacing-4px) var(--spacing-12px);
+  font-weight: var(--fw-600--semi-bold);
   text-decoration: none;
   color: var(--dark-background);
 }
 
 .hero-section .btn-container {
   display: flex;
-  padding-top: 2.437rem;
-  gap: 10px;
+  padding-top: var(--spacing-32px);
+  gap: var(--spacing-12px);
 }
 
 .hero-section .btn-primary {
@@ -209,7 +209,7 @@ p {
 
 .pets-section h2 {
   font-weight: bold;
-  font-size: 85px;
+  font-size: var(--fs-86);
 }
 
 /* ----> FOOTER  <---- */
@@ -217,7 +217,7 @@ footer p {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 14px;
+  font-size: var(--fs-14);
 }
 
 /* 
