--- a/review.css
+++ b/review.css
@@ -50,7 +50,7 @@
   --lh-paragraphs: 151.8%;
 
   /* ----> LETTER SPACING <---- */
-  --ls-1_75: 1.75px;
+  /* --ls-sm: 1.75px; */
 
   /* ----> BORDER RADIUS <---- */
   --br-button: 4.4375rem;
@@ -68,7 +68,9 @@
   /* ----> SHADOWS <---- */
 
   /* ----> MISC <---- */
-  --max-width: 1440px;
+  --max-width-div: 1440px;
+  --max-width-h1: 37.5rem;
+  --max-width-p: 35.625rem;
 
   --tb-padding-lg: 8.688rem;
   --lr-padding-lg: 11.75rem;
@@ -80,13 +82,12 @@
 /* ------------------------ */
 /* HELPER CLASSES           */
 /* ------------------------ */
-
 .center {
   margin: 0 auto !important;
 }
 
 .max-width {
-  max-width: var(--max-width);
+  max-width: var(--max-width-div);
 }
 
 .padding-lg {
@@ -167,18 +168,18 @@ p {
   height: 100vh;
 }
 
-.hero-section .left {
-  width: 70%;
+.hero-section .left h1 {
+  max-width: var(--max-width-h1); /* 600px */
 }
 
 .hero-section .left p {
   padding-top: var(--spacing-32px);
-  width: 67%;
+  max-width: var(--max-width-p); /* 570px */
 }
 
-.hero-section .right {
+/* .hero-section .right {
   width: 30%;
-}
+} */
 
 .hero-section a {
   padding: var(--spacing-4px) var(--spacing-12px);
@@ -209,6 +210,9 @@ p {
 .hero-section .btn-outline:hover {
   box-shadow: inset 0 0 0 2px var(--light-background);
 }
+
+/* ----> CALL OUT <---- */
+/* .call-out-section  */
 
 /* ----> PETS  <---- */
 .pets-section {
