--- a/review.css
+++ b/review.css
@@ -420,8 +420,8 @@ footer p {
     grid-template-columns: repeat(2, 1fr);
   }
 
-  .pet-cards-container {
-    grid-template-columns: repeat(1, 1fr);
+  .pets-section .pet-card {
+    grid-template-columns: 1fr;
   }
 }
 
@@ -479,6 +479,10 @@ footer p {
     grid-template-columns: repeat(1, 1fr);
   }
 
+  .pet-cards-container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
   .footer-section p {
     text-align: center;
   }
@@ -501,6 +505,10 @@ footer p {
     font-size: var(--fs-16);
   }
 
+  .pets-section .filter-buttons-wrapper button {
+    text-align: start;
+  }
+
   .hero-section,
   .call-out-section,
   .pets-section {
@@ -516,19 +524,12 @@ footer p {
 /* --------------------------- */
 @media only screen and (max-width: 29.375rem) {
   .pets-section .pet-card {
-    display: grid;
     grid-template-columns: 1fr;
-    border-radius: var(--br-card);
-    overflow: hidden;
-    background-color: var(--light-background);
-    border: 1px solid var(--gray-border);
-    box-shadow: var(--box-shadow);
   }
 
   .hero-section .btn-container {
     display: grid;
     grid-template-columns: 1fr;
-    padding-top: var(--spacing-32px);
   }
 
   .btn {
